# Andreanator_GPT

./: .env  Cargo.toml
src/: helpers.rs  main.rs
src/ai_functions/: aifunc_backend.rs  aifunc_managing.rs
src/apis/: call_request.rs
src/helpers/: command_line.rs  general.rs  hammer_loader.rs
src/models/agent_basic/: basic_agent.rs
src/models/agents/: agent_architect.rs  agent_backend.rs  agent_traits.rs
src/models/agents_manager/: managing_agent.rs
src/models/general/: llm.rs
web_template_rust/src/: main.rs
