[package]
name = "adreanator_gpt"
version = "0.1.0"
edition = "2024"

[dependencies]
ai_functions = "0.1.1"
async-trait = "0.1.88"
crossterm = "0.29.0"
dotenv = "0.15.0"
reqwest = { version = "0.12.18", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
strum = "0.27.1"
strum_macros = "0.27.1"
tokio = { version = "1.45.1", features = ["full"] }
webbrowser = "1.0.4"
